# todo_api

./: Cargo.toml  openapi.yaml
.github/workflows/: check-slim.yml
cmd/api/: main.rs
docs/: README.md  architecture.md  comparison_with_go.md  getting_started.md  rust_features.md
openapi_gen/: Cargo.toml  README.md
openapi_gen/.openapi-generator/: FILES
openapi_gen/src/: models.rs
openapi_gen/src/apis/: mod.rs  tasks.rs
openapi_gen/src/server/: mod.rs
spec/api/: openapi.yaml
src/: lib.rs
src/domain/: mod.rs
src/domain/model/: task.rs
src/domain/repository/: task.rs
src/infrastructure/: mod.rs  server.rs
src/infrastructure/http/: api_impl.rs  generated_routes.rs  mod.rs
src/infrastructure/http/handlers/: docs.rs  mod.rs
src/interface/: mod.rs
src/interface/gateway/: mod.rs
src/interface/gateway/inmemory/: task.rs
src/interface/presenter/: task.rs
src/usecase/: mod.rs  task.rs
tests/: mod.rs
tests/domain/: mod.rs  task_tests.rs
tests/integration/: error_handling_tests.rs  lifecycle_tests.rs  mod.rs  multiple_tasks_tests.rs
tests/repository/: create_tests.rs  delete_tests.rs  mod.rs  read_tests.rs  update_tests.rs  validation_tests.rs
tests/usecase/: create_tests.rs  delete_tests.rs  mod.rs  read_tests.rs  search_tests.rs  status_tests.rs  update_tests.rs
