[package]
name = "todo_api"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["openapi_gen"]

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
utoipa = { version = "5.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
openapiv3 = "1.0"
serde_yaml = "0.9"
mockall = "0.12"
validator = { version = "0.20", features = ["derive"] }
openapi = { path = "openapi_gen" }
axum-extra = "0.10.1"
http = "1"
tracing = "0.1"

[dev-dependencies]

[[bin]]
name = "api"
path = "cmd/api/main.rs"
